Se agregó el logo de Conekta y la barra de busqueda.

--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
 
-  <body></body>
+  <body>
+    <div class="div-Logo" style="position: relative;margin: 30vw 17vw;">
+        <img src="https://conekta.com/static/assets/Home/conekta-logo-blue-full.svg" alt="Conekta" class="conekta-logo" style="width: 50vw;position: fixed;">
+        <input type="text" class="css-input" />
+    </div>
+  </body>
 </html>
