fixed conekta logo position ✔️

--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Conekta Errors</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
 
-<body>
-    
-</body>
-
+  <body>
+    <div class="div-Logo" style="position: relative;margin: 30vw 17vw;">
+        <img src="https://conekta.com/static/assets/Home/conekta-logo-blue-full.svg" alt="Conekta" class="conekta-logo" style="width: 50vw;position: fixed;">
+        <input type="text" class="css-input" />
+    </div>
+  </body>
 </html>
