fixed html inline

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
 
   <body>
-    <div class="div-Logo" style="position: relative;margin: 30vw 17vw;">
-        <img src="https://conekta.com/static/assets/Home/conekta-logo-blue-full.svg" alt="Conekta" class="conekta-logo" style="width: 50vw;position: fixed;">
+    <div class="div-Logo">
+        <img src="https://conekta.com/static/assets/Home/conekta-logo-blue-full.svg" alt="Conekta" class="conekta-logo"">
         <input type="text" class="css-input" />
     </div>
   </body>
