Cambios en script e icono de lupa.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   <body>
     <div class="div-Logo">
         <img src="https://conekta.com/static/assets/Home/conekta-logo-blue-full.svg" alt="Conekta" class="conekta-logo">
-        <input type="text" class="css-input" />
+        <div class = "barraBusqueda">
+          <input type="text" class="css-input" />
+          <img src="https://www.svgrepo.com/show/14071/search.svg" alt="Search" class="search-icon">
+        </div> 
     </div>
   </body>
 </html>
