--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,7 +13,10 @@
   <body>
     <div class="div-Logo">
         <img src="https://conekta.com/static/assets/Home/conekta-logo-blue-full.svg" alt="Conekta" class="conekta-logo"">
-        <input type="text" class="css-input" />
+        <div class="css-input">
+          <input type="text" class="search-input"/>
+        <i class="fas fa-search"></i>
+        </div>
     </div>
   </body>
 </html>
